# app/models/appointment.server.model.js
@@ -32,6 +32,14 @@ const AppointmentSchema = new Schema({
         default: 'REQUESTED',
         required: "type is required",
     },
+    vaccine: {
+        type: Schema.Types.ObjectId,
+        ref: 'Vaccine'
+    },
+    vaccineDose: {
+        type: String,
+        required: "Vaccine dose is required"
+    },
     clinic: {
         type: Schema.Types.ObjectId,
         ref: 'Clinic'
